[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/bmkg"]
omit = ["tests/*"]

[project]
name = "bmkg-weather"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "pytest-cov",
]
